--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,4 @@ crate-type = ["cdylib"]
 
 [dependencies]
 gdnative = "0.9.0-preview.0"
-discord_game_sdk = "1.0.0"
+discord_game_sdk = { git = "https://github.com/EIRTeam/discord_game_sdk.git" }
